Feature/search (#21)
* feat : 병원 질료 시간정보 로드 및 데이터화

* feat : Hospital_Detail에 진료과 코드 추가 저장

* feat : Hospital_Department_Code 직렬화
* 기존의 경우 추가적으로 Department_Code 테이블에 저장 -> 해당 Code를 직렬화 하여 Hospital_Detail테이블에 저장

* feat : DTO와 DAO 도입

* feat : DTO, DAO �¦�
* DTO�¢ DAO �¦�
* 湲곗〈 @MapsId瑜 �ъK� �고 媛¦� 媛껐�⑷낵 DTO/DAO 蹂¢� 怨쇱��¦ �¬�� 而⑦�ㅽ �댁� �고 �¬� (managed vs. detached) 遺�쇱� 諛黝‾.
* DB� 議댁頡� Hospital �고곕� 李몄“� �濡黝扃 HospitalDetail �고곕� persist/merge � �,�竈踰¦�ㅼ竈�멸� 李몄“� Hospital �고곕� 以났 �¬�� �蕤��굅�, HospitalDetail�¦ 湲곗〈 �고곕� �ㅼ鯛� OptimisticLocking �� 諛黝‾.
* �대 DTO/DAO 蹂¢� � �¬� 而⑦�ㅽ몄�� 濡蕤�� managed �고 �몄ㅽ¦댁ㅻ� ��� �ъK�� 紐삵 諛黝‾炮�� 臾몄��¦.

* fix : HospitalDetail @Id 蹂¢寃
- HospitalDetail �고곕� persist/merge � � Hospital �고곕� 以났 �¬��� �蕤��굅�, HospitalDetail�¦ 湲곗〈 �고곕� �ㅼ鯛� OptimisticLocking �� 諛黝‾

Resolves: 863f845

* fix :Fixed logic bug in HospitalGrade batch job processing
데이터를 저장하는 과정에서 여러 문제 해결

* 검색

* feat: 이름,주소,번호 검색 기능 / 오류: 카테고리코드 검색시 구분 불가능

* feat: 검색페이지 추가중

* fit: 페이징 추가

* fix: 페이징 추가

* fix : CORS Configuration

* fix: 검색 오류 해결 및 카테고리코드 목록형으로 추가

* fix: 검색 오류 해결 및 카테고리코드 목록형으로 추가

---------

Co-authored-by: jae9380 <ljy5314@gmail.com>